# owl

./: .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  CMakeUserPresets.json  MODULE.bazel  Makefile  README.md  bazel-bin  bazel-out  bazel-owl  bazel-testlogs  example.owl  example1.ll  example2.ll  hello  todo.txt  vcpkg-configuration.json  vcpkg.json
examples/: hello-world.owl  point-add.owl
include/: rang.hpp
src/: BUILD  ast.h  basic_parser.h  basic_parser.hpp  basic_tokenizer.h  basic_tokenizer.hpp  error.h  error.hpp  hir.h  hir.hpp  llir.h  llir.hpp  main.cpp  main2.cpp  mir.h  mir.hpp  module.h  parser.h  parser.hpp  span.h  span.hpp  token.cpp  token.h  token.hpp  tokenizer.h  tokenizer.hpp  type.h  typeck.h
