module(name = "owl", version = "1.0.0")

bazel_dep(name = "fmt", version = "11.1.4")
bazel_dep(name = "argparse", version = "3.0.0")
bazel_dep(name = "llvm-project", version = "17.0.3.bcr.2")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
	module_name = "hedron_compile_commands",
	remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
	commit = "4f28899228fb3ad0126897876f147ca15026151e",
)
